# simple-httpfs

./: pyproject.toml
src/simple_httpfs/: __main__.py  httpfs.py
